--- a/en/13_Rust-lang/cargo-edit-cli/nexss-blog.html
+++ b/en/13_Rust-lang/cargo-edit-cli/nexss-blog.html
@@ -160,6 +160,7 @@ permalink: /en/13_Rust-lang/cargo-edit-cli/nexss-blog.html
                     <li><a href="en/13_Rust-lang/speed-up-Rust-workflow/nexss-blog.html">Speed Up Rust Workflow </a></li>
                     <li><a href="en/13_Rust-lang/useful-Rust-macros/nexss-blog.html">Useful Rust Macros </a></li>
                     <li><a class="active" href="en/13_Rust-lang/cargo-edit-cli/nexss-blog.html"><strong>Cargo Edit Cli</strong> </a></li>
+                    <li><a href="en/13_Rust-lang/serde_serialize_deserialize/nexss-blog.html">Serde_serialize_deserialize </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
