--- a/13_Rust-lang/useful-Rust-macros/nexss-blog.html
+++ b/13_Rust-lang/useful-Rust-macros/nexss-blog.html
@@ -160,6 +160,7 @@ permalink: /13_Rust-lang/useful-Rust-macros/nexss-blog.html
                     <li><a href="13_Rust-lang/speed-up-Rust-workflow/nexss-blog.html">Speed Up Rust Workflow </a></li>
                     <li><a class="active" href="13_Rust-lang/useful-Rust-macros/nexss-blog.html"><strong>Useful Rust Macros</strong> </a></li>
                     <li><a href="13_Rust-lang/cargo-edit-cli/nexss-blog.html">Cargo Edit Cli </a></li>
+                    <li><a href="13_Rust-lang/serde_serialize_deserialize/nexss-blog.html">Serde_serialize_deserialize </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
