--- a/nexss-blog.html
+++ b/nexss-blog.html
@@ -164,6 +164,7 @@ permalink: /nexss-blog.html
                     <li><a href="13_Rust-lang/speed-up-Rust-workflow/nexss-blog.html">Speed Up Rust Workflow </a></li>
                     <li><a href="13_Rust-lang/useful-Rust-macros/nexss-blog.html">Useful Rust Macros </a></li>
                     <li><a href="13_Rust-lang/cargo-edit-cli/nexss-blog.html">Cargo Edit Cli </a></li>
+                    <li><a href="13_Rust-lang/serde_serialize_deserialize/nexss-blog.html">Serde_serialize_deserialize </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
