--- a/334_productivity/VSCode-Custom-Profiles/nexss-blog.html
+++ b/334_productivity/VSCode-Custom-Profiles/nexss-blog.html
@@ -189,7 +189,7 @@ permalink: /334_productivity/VSCode-Custom-Profiles/nexss-blog.html
                 <h3>Modern Web</h3>
         <ul>
                     <li><a href="669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
-                    <li><a href="669_Modern-Web/Lighting-fast-loading/nexss-blog.html">Lighting Fast Loading </a></li>
+                    <li><a href="669_Modern-Web/Lightening-fast-loading/nexss-blog.html">Lightening Fast Loading </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
