--- a/pl/13_Rust-lang/bin-and-lib-one-crate/nexss-blog.html
+++ b/pl/13_Rust-lang/bin-and-lib-one-crate/nexss-blog.html
@@ -189,7 +189,7 @@ permalink: /pl/13_Rust-lang/bin-and-lib-one-crate/nexss-blog.html
                 <h3>Modern Web</h3>
         <ul>
                     <li><a href="pl/669_Modern-Web/Interesting-html5-tags/nexss-blog.html">Interesting Html5 Tags </a></li>
-                    <li><a href="pl/669_Modern-Web/Lighting-fast-loading/nexss-blog.html">Lighting Fast Loading </a></li>
+                    <li><a href="pl/669_Modern-Web/Lightening-fast-loading/nexss-blog.html">Lightening Fast Loading </a></li>
                   </ul>
                 <h3>Our Free Packages</h3>
         <ul>
