--- a/11_blog-nexss-programmer/frontend/nexss-blog.html
+++ b/11_blog-nexss-programmer/frontend/nexss-blog.html
@@ -161,6 +161,7 @@ permalink: /11_blog-nexss-programmer/frontend/nexss-blog.html
                     <li><a href="13_Rust-lang/useful-Rust-macros/nexss-blog.html">Useful Rust Macros </a></li>
                     <li><a href="13_Rust-lang/cargo-edit-cli/nexss-blog.html">Cargo Edit Cli </a></li>
                     <li><a href="13_Rust-lang/serde-serialize-and-deserialize/nexss-blog.html">Serde Serialize And Deserialize </a></li>
+                    <li><a href="13_Rust-lang/Cargo.toml-workspace/nexss-blog.html">Cargo.toml Workspace </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
