--- a/13_Rust-lang/Cargo.toml-workspace/nexss-blog.html
+++ b/13_Rust-lang/Cargo.toml-workspace/nexss-blog.html
@@ -1,6 +1,6 @@
 ---
-title: "BLOG Bitwig Studio - Bitwig VST Video Player"
-permalink: /333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
+title: "BLOG Rust Lang - Cargo.toml Workspace"
+permalink: /13_Rust-lang/Cargo.toml-workspace/nexss-blog.html
 ---
 <!DOCTYPE html><html lang="en"><head>
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-97241406-1"></script>
@@ -13,16 +13,16 @@ permalink: /333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
 </script>
 
   <title>
-    BLOG Bitwig Studio - Bitwig VST Video Player
+    BLOG Rust Lang - Cargo.toml Workspace
   </title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="blog, nexss programmer, tips and tricks,blender,natron,programming">
-  <meta name="description" content="Bitwig VST Video Player - Nexss Programmer Blog">
+  <meta name="description" content="Cargo.toml Workspace - Nexss Programmer Blog">
   
   <meta property="og:title" content="Nexss.com">
-  <meta property="og:description" content="BLOG Bitwig Studio - Bitwig VST Video Player">
+  <meta property="og:description" content="BLOG Rust Lang - Cargo.toml Workspace">
   <meta property="og:image" content="https://www.nexss.com/assets/default/images/header_logo.png">
   <meta property="og:url" content="https://www.nexss.com">
   <base href="/">
@@ -57,7 +57,7 @@ permalink: /333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
             </li>
             <li>/</li>
             <li>
-                <a class="selected" href="/pl/333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">PL</a>
+                <a class="selected" href="/pl/13_Rust-lang/Cargo.toml-workspace/nexss-blog.html">PL</a>
             </li>
         </ul>
         <div class="soc clearfix">
@@ -161,7 +161,7 @@ permalink: /333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
                     <li><a href="13_Rust-lang/useful-Rust-macros/nexss-blog.html">Useful Rust Macros </a></li>
                     <li><a href="13_Rust-lang/cargo-edit-cli/nexss-blog.html">Cargo Edit Cli </a></li>
                     <li><a href="13_Rust-lang/serde-serialize-and-deserialize/nexss-blog.html">Serde Serialize And Deserialize </a></li>
-                    <li><a href="13_Rust-lang/Cargo.toml-workspace/nexss-blog.html">Cargo.toml Workspace </a></li>
+                    <li><a class="active" href="13_Rust-lang/Cargo.toml-workspace/nexss-blog.html"><strong>Cargo.toml Workspace</strong> </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
@@ -171,7 +171,7 @@ permalink: /333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
                   </ul>
                 <h3>Bitwig Studio</h3>
         <ul>
-                    <li><a class="active" href="333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html"><strong>Bitwig VST Video Player</strong> </a></li>
+                    <li><a href="333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html">Bitwig VST Video Player </a></li>
                   </ul>
                 <h3>Productivity</h3>
         <ul>
@@ -201,54 +201,54 @@ permalink: /333_blog-bitwig-studio/bitwig-VST-video-player/nexss-blog.html
                   </ul>
               </div>
       <div class="column2">
-        <h1>Bitwig VST Video Player</h1>
-<p>This article won't be about 'how to make <strong>VST</strong> to sync videos using VST', but rather work around how to make it work in <strong>Bitwig Studio</strong> (and also in another DAW).</p>
-<h2>Setup Environment (Windows)</h2>
-<p>Please remember to <em>check licenses</em> of that great software before use them.</p>
+        <h1>Rust Cargo workspace</h1>
+<p>Important Note: tests (cargo test) will not work for all crates (defined in the <em>workspaces</em>), if the main <strong>Cargo.toml</strong> (virtual manifest) will have specified [package] (name, version, edition). Best to keep <em>workspace</em> only (?)</p>
+<p>Example of working workspace setup:</p>
 <ul>
 <li>
-<p><strong>Download</strong> and install <a href="https://www.tobias-erichsen.de/software/loopmidi.html">loopMidi</a> by Tobias Erichsen.</p>
+<p><strong>crates</strong></p>
+<ul>
+<li>
+<p><strong>lib1</strong> <em>(--lib)</em> lib1/src/lib.rs</p>
+<pre><code class="language-toml">[package]
+name = "lib1"
+version = "0.1.0"
+edition = "2021"</code></pre>
 </li>
 <li>
-<p><a href="http://xjadeo.sourceforge.net/download.html">Download</a> and install <a href="https://github.com/x42/xjadeo">xjadeo</a> <em>video player</em>.</p>
-<p><br></p>
-</li>
-<li>
-<p>Run xJadeo from command line:</p>
+<p><strong>lib2</strong> <em>(--lib)</em> lib2/src/lib.rs</p>
+<pre><code class="language-toml">[package]
+name = "lib2"
+version = "0.1.0"
+edition = "2021"</code></pre>
 </li>
 </ul>
-<pre><code class="language-sh">"C:\Program Files\xjadeo\xjadeo.exe" -S -a -i 3 --midi-driver portmidi -m -1</code></pre>
-<p>more options on xjadeo <a href="http://xjadeo.sourceforge.net/xjadeo.html">cli arguments - here</a>.</p>
-<p><br></p>
-<p>Right Click and <strong>File</strong>-&gt;<strong>Open</strong> or <strong>CTRL+O</strong> and select your <strong>video</strong>.</p>
-<h2>Start - Synchronize Video with Bitwig Studio</h2>
-<ol>
-<li>
-<p>Start the <strong>loopMidi</strong> and create new Loopback Midi Port and name it for example "myMidiLoopback"</p>
-<p><br></p>
 </li>
 <li>
-<p>Drag and Drop the Video in the Bitwig (It will extract audio and place in the (best) Audio Track). Then change the audio clip to raw (select the Audio clip you just imported and in the Audio Event Properties -&gt; MODE change from <strong>Stretch</strong> to <strong>Raw</strong>)</p>
-<p><br></p>
+<p><strong>yourpackage</strong> <em>(--bin)</em> yourpackage/src/main.rs
+Cargo.toml</p>
+<pre><code class="language-toml">[dependencies]
+# includes your libs
+lib1 = { path = "../lib1" }
+lib2 = { path = "../lib2" }</code></pre>
 </li>
 <li>
-<p>Go to the <strong>Bitwig Studio</strong>-&gt;<strong>Settings</strong>-&gt;<strong>Synchronization</strong> and click on <strong>MTC</strong> for "myMidiLoopback".</p>
+<p>Cargo.toml (virtual - specify folders for libs)</p>
 </li>
-<li>
-<p>Now start playing music in the Bitwig Studio and you can see that video is synchronized.
-<br>
-<span style="color:green;">
-<strong>NOTE</strong> If it is still not playing with bitwig you may need to look at xjadeo starting. For example change from -m -1 (autodetect) to different number: -m 3 (when -1 didn't work)
-</span></p>
-</li>
-</ol>
-<pre><code class="language-sh">"C:\Program Files\xjadeo\xjadeo.exe" -S -a -i 3 --midi-driver portmidi -m 3</code></pre>
-<p><br></p>
-<p><em>note:</em> You can make the <strong>video player</strong> window stay on top <strong>Right Click-&gt;Display-&gt;On Top</strong> or using short cut <strong>SHIFT+A</strong> (keep pressed bit longer as short may not work.)</p>
-<p><em>note 2:</em> You can shrink the video for a better performance using <strong>ffmpeg</strong>. For example:</p>
-<pre><code class="language-sh"># shrink your video to one quarter size. Change 8 to 4 for half size.
-ffmpeg -i yourvideo.mp4 -vf "scale=trunc(iw/8)*2:trunc(ih/8)*2" -vcodec h264 -acodec aac -crf 28 a_fourth_the_frame_size.mkv</code></pre>
-<p>So without extra <strong>VST</strong> plugins you can synchronize videos using just <strong>video player</strong> and MIDI.</p>
+</ul>
+<pre><code class="language-toml">[workspace]
+members = ["crates/*"]</code></pre>
+<p>Run tests for all packages:</p>
+<pre><code class="language-sh">cargo test # in the main folder - will run tests also for lib1, and lib2</code></pre>
+<p><strong>Important Note:</strong> If you put dependencies in this <code>Cargo.toml</code> (the virtual setup / workspace), the 'cargo test' will not run tests in the lib1, and lib2 etc., so it seems the safest is to just put workspace (?).</p>
+<h2>Multiple binaries</h2>
+<p>if you have multiple examples (usage of <em>cargo run --example</em>) with the same name or binaries (usage of <em>cargo run --bin</em>), you may want to use 'default-members' in the workspace definition. Please see below.</p>
+<h2>Example workspace</h2>
+<p>Here contains includes</p>
+<pre><code class="language-toml">[workspace]
+members = ["crates/*", "some/other/path/member2"]
+exclude = ["crates/foo", "path/to/other"]
+default-members = ["crates/lib1"]</code></pre>
         <span style="margin-top:30px;font-size:10px;font-color:#aaa;">If you found it valuable, please join to the nexss.com supporters at: <a href="fund.html">Support Nexss.com</a></span>
       </div>
     </div>
