--- a/en/969_Our-free-packages/@nexssp-command/nexss-blog.html
+++ b/en/969_Our-free-packages/@nexssp-command/nexss-blog.html
@@ -161,6 +161,7 @@ permalink: /en/969_Our-free-packages/@nexssp-command/nexss-blog.html
                     <li><a href="en/13_Rust-lang/useful-Rust-macros/nexss-blog.html">Useful Rust Macros </a></li>
                     <li><a href="en/13_Rust-lang/cargo-edit-cli/nexss-blog.html">Cargo Edit Cli </a></li>
                     <li><a href="en/13_Rust-lang/serde-serialize-and-deserialize/nexss-blog.html">Serde Serialize And Deserialize </a></li>
+                    <li><a href="en/13_Rust-lang/Cargo.toml-workspace/nexss-blog.html">Cargo.toml Workspace </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
