--- a/pl/13_Rust-lang/useful-Rust-macros/nexss-blog.html
+++ b/pl/13_Rust-lang/useful-Rust-macros/nexss-blog.html
@@ -161,6 +161,7 @@ permalink: /pl/13_Rust-lang/useful-Rust-macros/nexss-blog.html
                     <li><a class="active" href="pl/13_Rust-lang/useful-Rust-macros/nexss-blog.html"><strong>Useful Rust Macros</strong> </a></li>
                     <li><a href="pl/13_Rust-lang/cargo-edit-cli/nexss-blog.html">Cargo Edit Cli </a></li>
                     <li><a href="pl/13_Rust-lang/serde-serialize-and-deserialize/nexss-blog.html">Serde Serialize And Deserialize </a></li>
+                    <li><a href="pl/13_Rust-lang/Cargo.toml-workspace/nexss-blog.html">Cargo.toml Workspace </a></li>
                   </ul>
                 <h3>Node.js</h3>
         <ul>
