--- a/pl/nexss-blog.html
+++ b/pl/nexss-blog.html
@@ -206,7 +206,23 @@ permalink: /pl/nexss-blog.html
               </div>
       <div class="column2">
         <h1>News</h1>
-<h2>Nexss Programmer 3.0 alpha</h2>
+<h2>Deno - New Runtime for Node.js and TypeScript</h2>
+<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">May 29th, 2022</span></p>
+<p><strong>Deno</strong> A modern runtime for JavaScript and TypeScript.
+For more details: </p>
+<pre><code>nexss ts readme
+nexss js readme</code></pre>
+<ul>
+<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.103">more</a><h2>New Language: Solidity and readme for each language</h2>
+</li>
+</ul>
+<p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">May 25th, 2022</span></p>
+<p><strong>Solidity</strong> is an object-oriented, high-level language for implementing smart contracts.  </p>
+<ul>
+<li>Also new readme functionality. The new extension supported <strong>.sol</strong></li>
+<li><a href="https://github.com/nexssp/cli/releases/tag/2.5.101">more</a><h2>Nexss Programmer 3.0 alpha</h2>
+</li>
+</ul>
 <p><span style="color:#4e8800;margin-bottom:10px;margin-top:-5px;font-weight:bold;">April 25th, 2022</span></p>
 <p>We are working hard to make Nexss Programmer 3.0 and it is still long way. However, everything from version 3.0, most of the main code will be written in <b>Rust</b>.</p>
 <h2>MacOS X and  <b>2.5.98</b></h2>
